--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for App-GetoptLongUtils
 
-0.01    2016-01-08 (PERLANCAR) (unreleased)
+0.001   2016-09-14 (PERLANCAR)
 
         - First release.
