--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for App-GetoptLongUtils
 
+0.005   2016-10-30 (PERLANCAR)
+
+	- Add utility: gen-getopt-long-spec-from-getopt-std-spec.
+
+
 0.004   2016-10-27 (PERLANCAR)
 
 	- Add utility: detect-getopt-long-script.
