--- a/Changes
+++ b/Changes
@@ -1,28 +1,28 @@
-0.006   2017-08-10 (PERLANCAR)
+0.006   2017-08-10  Released-By: PERLANCAR
 
 	- Add script: dump-getopt-long-evenless-script.
 
 
-0.005   2016-10-30 (PERLANCAR)
+0.005   2016-10-30  Released-By: PERLANCAR
 
 	- Add utility: gen-getopt-long-spec-from-getopt-std-spec.
 
 
-0.004   2016-10-27 (PERLANCAR)
+0.004   2016-10-27  Released-By: PERLANCAR
 
 	- Add utility: detect-getopt-long-script.
 
 
-0.003   2016-10-21 (PERLANCAR)
+0.003   2016-10-21  Released-By: PERLANCAR
 
 	- Add utility: dump-getopt-long-script.
 
 
-0.002   2016-09-14 (PERLANCAR)
+0.002   2016-09-14  Released-By: PERLANCAR
 
 	- Fix package name.
 
 
-0.001   2016-09-14 (PERLANCAR)
+0.001   2016-09-14  Released-By: PERLANCAR
 
         - First release.
